--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
             <label class="form__find-label" for="form__find-item"
               >Кого или что будем искать?
               <select class="form__find-item" name="find" id="form__find-item">
-                <option value="" disabled selected>-Выберите объект-</option>
+                <option value="-Выберите объект-" disabled selected>
+                  -Выберите объект-
+                </option>
                 <option value="films">Фильмы</option>
                 <option value="people">Люди</option>
                 <option value="planets">Планеты</option>
@@ -52,10 +54,13 @@
               />
             </label>
           </div>
+          <div class="form__error"></div>
           <button class="form__button" type="button">Поиск</button>
         </form>
       </div>
+      <div class="spinner"></div>
       <div class="result"></div>
+      <div class="error"></div>
     </div>
     <script src="index.js"></script>
   </body>
