--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                 min="1"
                 max="10"
                 step="1"
+                required
               />
             </label>
           </div>
